# Microcontroller-development-framework

./:  CMakeLists.txt  .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  crossCompile.cmake  main.cpp  vcpkg-backUP.json  vcpkg.json
.temp/others/: asd.c
.temp/vscode_mac_backUp/: settings.json
.temp/vscode_win_backUp/: c_cpp_properties.json  settings.json
cross_compilation_page/linux/: readme.md
cross_compilation_page/mac/: readme.md
extralib/: CMakelists.txt
extralib/freeRtos/: CMakeLists.txt  FreeRTOSConfig-backUp  FreeRTOSConfig.h
extralib/freeRtos/FreeRTOS-Kernel/examples/cmake_example/: CMakeLists.txt  main.c
file/: text.txt
lib/: CMakelists.txt  print.cpp  print.h  print.hpp
lib/new/: new.c  new.h
lib/other/: CMakelists.txt  other.cpp  other.hpp
lib/print/: CMakelists.txt  print.hpp
source/: main.cpp
src/: CMakeLists.txt  main.c  main.cpp
src/evolution/: CMakelists.txt  evolution.cpp  evolution.hpp
static/evolution/: evolution.c  evolution.h
static/fileOpen/: fileOpen.c  fileOpen.h
static/point/: point.c  point.h
static/point2/: point2.c  point2.h
static/pointApplication/: pointApplication.c  pointApplication.h
static/print/: print.cpp
static/transformToByte/: transformToByte.c  transformToByte.h
